<resources>
    <string name="app_name">Students</string>

    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Students</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_student">Add a Student</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_student">Edit a Student</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Try to add a student</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new pet has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_student_successful">Student saved</string>

    <!-- Toast message in editor when new pet has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_student_failed">Error with saving student</string>

    <!-- Toast message in editor when current pet was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_student_successful">Student updated</string>

    <!-- Toast message in editor when current pet has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_student_failed">Error with updating student</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog message to ask the user to confirm deleting the current student [CHAR LIMIT=NONE] -->
    <string name="delete_all_dialog_msg">Delete all students?</string>

    <!-- Dialog button text for the option to keep editing the current student [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_student_successful">Student deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_student_failed">Error with deleting student</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this student?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_presence">Presence</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_degree">Degrees</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_add_degree">Add degrees</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_add_phone_number">Add phone number</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_phone_number">Phone number</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_address">Address</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_student_name">Name</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_student_group">Group</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_student_school">School</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_student_quiz">Quiz</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_student_exam">Exam</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_student_address">Address</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_student_number">Phone number</string>

    <!-- Label for dropdown menu option if the pet's gender is unknown [CHAR LIMIT=20] -->
    <string name="unknown">Unknown</string>

    <!-- Label for dropdown menu option if the pet is male [CHAR LIMIT=20] -->
    <string name="one_day">One day</string>

    <!-- Label for dropdown menu option if the pet is female [CHAR LIMIT=20] -->
    <string name="two_days">Two days</string>

    <!-- Label for dropdown menu option if the pet is female [CHAR LIMIT=20] -->
    <string name="three_days">Three days</string>

    <!-- Label for dropdown menu option if the pet is female [CHAR LIMIT=20] -->
    <string name="four_days">Four days</string>

    <!-- Text hint for search field in the editor [CHAR LIMIT=20] -->
    <string name="search_student">Search</string>

</resources>
